--- a/anarchistos-exit/debian/control
+++ b/anarchistos-exit/debian/control
@@ -7,6 +7,7 @@ Standards-Version: 3.9.5
 Homepage: https://www.anarchistos.tk/
 
 Package: anarchistos-exit
+Distribution: crowbar
 Architecture: all
 Depends: ${shlibs:Depends}, ${misc:Depends}, python-gtk2, consolekit, upower
 Description: AnarchistOS logout script.
